--- a/index.html
+++ b/index.html
@@ -119,6 +119,26 @@
 
                 $('#gifs').append(gifDiv);
 
+                
+   // themeGif.attr('data-still', imageUrl);
+                // themeGif.attr('data-animated', animatedImage);
+                // themeGif.addClass('animation');
+
+   // $('.animation').on('click', function() {
+
+      //             		if ($(this).attr('data-still') === $(this).attr('src')) {
+
+      //             			$(this).attr('src') = $(this).attr('data-animated');
+
+      //             	}
+      //             		else {
+
+      //             			$(this).attr('src') = $(this).attr('data-still');
+						// }
+                  
+      //             });
+
+
 
 
                 };
